tests/snapshots/tui_drop_confirm__drop_confirm_dialog.snap
---
source: tests/tui_drop_confirm.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::drop::render_drop_confirm(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor parser module                                               ",
        "def456gh   Add feature X                                                        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "          ┌ Confirm Drop ────────────────────────────────────────────┐          ",
        "          │                                                          │          ",
        "          │ Drop this commit?                                        │          ",
        "          │                                                          │          ",
        "          │ abc123de                                                 │          ",
        "          │ Refactor parser module                                   │          ",
        "          │                                                          │          ",
        "          │                Enter Confirm   Esc Cancel                │          ",
        "          │                                                          │          ",
        "          └──────────────────────────────────────────────────────────┘          ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 29, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 14, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 15, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
