tests/snapshots/tui_drop_confirm__drop_confirm_dialog_long_summary.snap
---
source: tests/tui_drop_confirm.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor parser module                                               ",
        "def456gh   Add feature X                                                        ",
        "                                                                                ",
        "          ┌ Confirm Drop ────────────────────────────────────────────┐          ",
        "          │                                                          │          ",
        "          │ Drop this commit?                                        │          ",
        "          │                                                          │          ",
        "          │ abc123de                                                 │          ",
        "          │ Refactor the entire parser module to use trait-based     │          ",
        "          │ dispatching for better extensibility                     │          ",
        "          │                                                          │          ",
        "          │                Enter Confirm   Esc Cancel                │          ",
        "          │                                                          │          ",
        "          └──────────────────────────────────────────────────────────┘          ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 29, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 69, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
