tests/snapshots/tui_drop_confirm__drop_confirm_dialog_narrow_terminal.snap
---
source: tests/tui_drop_confirm.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::drop::render_drop_confirm(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 15 },
    content: [
        "SHA        Title                        ",
        "abc123de   Refactor parser module       ",
        "de┌ Confirm Drop ────────────────────┐  ",
        "  │                                  │  ",
        "  │ Drop this commit?                │  ",
        "  │                                  │  ",
        "  │ abc123de                         │  ",
        "  │ Add feature X                    │  ",
        "  │                                  │  ",
        "  │    Enter Confirm   Esc Cancel    │  ",
        "  │                                  │  ",
        "  └──────────────────────────────────┘  ",
        "                                        ",
        "                                        ",
        " abc123def456 2/2    Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 21, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 23, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 39, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
