tests/snapshots/tui_drop_confirm__drop_conflict_dialog_long_summary.snap
---
source: tests/tui_drop_confirm.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::conflict::render_conflict(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Refactor the entire parser module to use trait-based dispatching for ",
        "def456gh   Add feature X                                                        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "         ┌ Drop Conflict ─────────────────────────────────────────────┐         ",
        "         │                                                            │         ",
        "         │ Merge conflict during drop                                 │         ",
        "         │                                                            │         ",
        "         │ Conflict in abc123de                                       │         ",
        "         │ Refactor the entire parser module to use trait-based       │         ",
        "         │ dispatching for better extensibility                       │         ",
        "         │ (2 commit(s) still to rebase after this)                   │         ",
        "         │                                                            │         ",
        "         │     Enter Continue   m Mergetool   e Editor   Esc Abort    │         ",
        "         │                                                            │         ",
        "         └────────────────────────────────────────────────────────────┘         ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 37, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 23, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 14, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 21, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 46, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 48, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 15, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 70, y: 16, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
