tests/snapshots/tui_drop_confirm__drop_conflict_dialog_narrow_terminal.snap
---
source: tests/tui_drop_confirm.rs
assertion_line: 141
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::conflict::render_conflict(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 15 },
    content: [
        "SHA        Title                        ",
        "ab┌ Drop Conflict ───────────────────┐  ",
        "de│                                  │  ",
        "  │ Merge conflict during drop       │  ",
        "  │                                  │  ",
        "  │ Conflict in abc123de             │  ",
        "  │ Refactor parser module           │  ",
        "  │ (1 commit(s) still to rebase     │  ",
        "  │ after this)                      │  ",
        "  │                                  │  ",
        "  │ Enter Continue   m Mergetool   e │  ",
        "  │        Editor   Esc Abort        │  ",
        "  │                                  │  ",
        "  └──────────────────────────────────┘  ",
        " abc123def456 2/2    Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 2, y: 1, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Red, bg: Black, underline: Reset, modifier: BOLD,
        x: 30, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 7, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 8, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 9, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 10, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 21, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 23, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 36, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 10, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 20, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 11, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 12, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 39, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
